--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <header id="page-header">
             <span id="page-header-title">Soaroma SAC | Configuration Editor</span>
-            <code style="font-size:0.75em;margin-left:2em">SAC v1.0.38 | Editor v0.0.1</code>
+            <code style="font-size:0.75em;margin-left:2em">SAC v1.0.46 | Editor v0.0.2</code>
         </header>
 
         <div id="beta-flag">
@@ -61,7 +61,14 @@
                 </li>
 
                 <li class="sidebar-item">
+                    <button class="sidebar-button" id="auto-insensitive-config" title="The auto-insensitive configuration.">Auto-insensitive</button>
                     <button class="sidebar-button" id="default-config" title="The default configuration.">Default</button>
+                    <button class="sidebar-button" id="gameratebest9-config" title="The gameratebest9's configuration.">gameratbest9</button>
+                    <button class="sidebar-button" id="insensitive-config" title="The insensitive configuration.">Insensitive</button>
+                    <button class="sidebar-button" id="main-config" title="The main configuration.">Main</button>
+                    <button class="sidebar-button" id="movement-config" title="The movement configuration.">Movement</button>
+                    <button class="sidebar-button" id="recommended-config" title="The recommended configuration.">Recommended</button>
+                    <button class="sidebar-button" id="sensitive-config" title="The sensitive configuration.">Sensitive</button>
                 </li>
 
             </ul>
